...


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="10:00"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"></TextView>


                <TextView
...


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="11:00"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"></TextView>


                <TextView
...


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="12:00"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"></TextView>


                <TextView
...


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="14:00"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"></TextView>


                <TextView
...


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="15:00"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"></TextView>



...


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="16:00"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"></TextView>


                <TextView
...


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="17:00"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"></TextView>


                <TextView
...


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="18:00"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#000"></TextView>


                <TextView
...
