...
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card"
            android:padding="20dp"
            android:background="@color/colorSplashText"
            >

            <ImageView
                android:id="@+id/profile_image"
...
                app:layout_constraintVertical_bias="0.221"
                tools:layout_editor_absoluteX="30dp" />



            <EditText
                android:id="@+id/username"
                android:layout_width="246dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user1"
                android:hint="Email"
                android:maxLines="1"
                android:singleLine="true"
...
                android:layout_margin="30dp"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/lock"
                android:hint="password"
...
                />


            <Button
                android:onClick="doLogin"
                android:background="@drawable/button_drawable"
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="14dp"
                android:text="Login"
                android:textColor="#FFF"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t1"
                />

...
